practice/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v0-ingress
  labels:
    app.kubernetes.io/name: v0-ingress
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/api/sandbox"
        backend:
          service:
            name: sandbox-server-service
            port: 
              number: 80

   - host: "*.preview.localhost"
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: router-service
            port:
              number: 80
